hard work and tears

--- a/notebooks/initial_stackel.ipynb
+++ b/notebooks/initial_stackel.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,34 +25,72 @@
     }
    ],
    "source": [
+    "import ast\n",
+    "\n",
     "import pycid\n",
     "import numpy as np\n",
-    "from pycid.core.mechanised_graph import MechanisedGraph"
+    "from pycid.core.mechanised_graph import MechanisedGraph\n",
+    "from pycid.core.cpd import StochasticFunctionCPD\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def utility_function_follower(d1: tuple, d2: int) -> float:\n",
+    "def utility_function_follower(defender: tuple, attacker: int) -> float:\n",
     "    \"\"\"From GT slides\"\"\"\n",
-    "    R = 2\n",
-    "    P = 1\n",
-    "    udef = 1 - d1[d2-1] * R + d1[d2-1] * P\n",
-    "    return udef\n",
+    "    attacker_reward = 2\n",
+    "    follower_penalty = 1\n",
+    "    u_follower = (1 - defender[attacker-1]) * attacker_reward + defender[attacker-1] * follower_penalty\n",
+    "    return u_follower\n",
     "\n",
     "def utility_function_leader(d1: tuple, d2: int) -> float:\n",
-    "    R = 2\n",
-    "    P = 1\n",
-    "    udef = 1 - d1[d2-1] * P + d1[d2-1] * R\n",
-    "    return udef\n"
+    "    leader_reward = 2\n",
+    "    leader_penalty = 1\n",
+    "    u_leader = (1 - d1[d2-1]) * leader_penalty + d1[d2-1] * leader_reward\n",
+    "    return u_leader\n",
+    "\n",
+    "def stochastic_cpd_to_dict(stochastic_cpd: StochasticFunctionCPD) -> dict:\n",
+    "    \"\"\"Converts a stochastic cpd to a dictionary\"\"\"\n",
+    "    return ast.literal_eval(str(stochastic_cpd).split(\"->\")[1])\n",
+    "\n",
+    "\n",
+    "def calculate_utilities(stochastic_cpd: list[StochasticFunctionCPD]) -> tuple[float, float]:\n",
+    "    \"\"\"Calculates the utility of a stochastic cpd\"\"\"\n",
+    "    leader_strategy = stochastic_cpd_to_dict(stochastic_cpd[0])\n",
+    "    follower_strategy = stochastic_cpd_to_dict(stochastic_cpd[1])\n",
+    "\n",
+    "    # find keys with nonzero values\n",
+    "    leader_strategy = {key: value for key, value in leader_strategy.items() if value > 0}\n",
+    "\n",
+    "    # calculate weighted utility for each\n",
+    "    leader_utility = 0\n",
+    "    follower_utility = 0 \n",
+    "    for leader_strat, leader_prob in leader_strategy.items():\n",
+    "        for follower_strat, follower_prob in follower_strategy.items():\n",
+    "            leader_utility += leader_prob * follower_prob * utility_function_leader(leader_strat, follower_strat)\n",
+    "            follower_utility += leader_prob * follower_prob * utility_function_follower(leader_strat, follower_strat)\n",
+    "    \n",
+    "    return leader_utility, follower_utility\n",
+    "\n",
+    "def find_best_nash_equilibrium(nash_eq: list[StochasticFunctionCPD]) -> tuple[StochasticFunctionCPD, float]:\n",
+    "    \"\"\"Finds the best nash equilibrium\"\"\"\n",
+    "    best_nash_eq = None\n",
+    "    best_utility = 0\n",
+    "    for eq in nash_eq:\n",
+    "        leader_utility, follower_utility = calculate_utilities(eq)\n",
+    "        if leader_utility > best_utility:\n",
+    "            best_utility = leader_utility\n",
+    "            assert isinstance(best_utility, float)\n",
+    "            best_nash_eq = eq\n",
+    "    return best_nash_eq, best_utility\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +105,7 @@
     "\n",
     "# Discretise domains to fit with PyCID (It is not possible to use continuous domains in pygambit, right?)\n",
     "PRECISION = 0.2\n",
-    "CONSTRAINT = 1\n",
+    "CONSTRAINT = 2.6\n",
     "d1_domain = [(a, b, c) for a in np.arange(0, 1.1, PRECISION) for b in np.arange(0, 1.1, PRECISION) for c in np.arange(0, 1.1, PRECISION) if a + b + c == CONSTRAINT]\n",
     "d2_domain = list(range(1, 4))\n",
     "\n",
@@ -84,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,40 +155,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# process for finding stackelberg equilibrium: find the strategy (or meta-strategy) that has the highest probability and then commit to that. \n",
-    "# An alternative approach would be to commit to the highest utility meta-strategy, but is that allowed? :))\n",
-    "\n",
-    "high_probability_strategies = [CPD for CPD in nash_eq if any_high_prob(CPD[0], threshold=0.9)]\n",
-    "\n",
-    "# find the strategy that has the highest probability\n",
-    "highest_probability_strategy = max(nash_eq, key=lambda CPD: max(CPD[0].get_values()))\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[StochasticFunctionCPD<D1> \n",
-       " {}  ->  {(0.0, 0.0, 1.0): 0.0, (0.0, 0.2, 0.8): 0.0, (0.0, 0.4, 0.6000000000000001): 0.0, (0.0, 0.6000000000000001, 0.4): 0.0, (0.0, 0.8, 0.2): 0.0, (0.0, 1.0, 0.0): 0.0, (0.2, 0.0, 0.8): 0.0, (0.2, 0.2, 0.6000000000000001): 0.0, (0.2, 0.4, 0.4): 0.8333333333333335, (0.2, 0.6000000000000001, 0.2): 0.0, (0.2, 0.8, 0.0): 0.0, (0.4, 0.0, 0.6000000000000001): 0.0, (0.4, 0.2, 0.4): 0.0, (0.4, 0.4, 0.2): 0.0, (0.4, 0.6000000000000001, 0.0): 0.0, (0.6000000000000001, 0.0, 0.4): 0.0, (0.6000000000000001, 0.2, 0.2): 0.0, (0.6000000000000001, 0.4, 0.0): 0.0, (0.8, 0.0, 0.2): 0.0, (0.8, 0.2, 0.0): 0.0, (1.0, 0.0, 0.0): 0.16666666666666657},\n",
-       " StochasticFunctionCPD<D2> \n",
-       " {}  ->  {1: 0.33333333333333326, 2: 0.3333333333333333, 3: 0.33333333333333354}]"
+       "[(1.8666666666666671, 1.1333333333333333),\n",
+       " (1.8666666666666667, 1.1333333333333333),\n",
+       " (1.8666666666666667, 1.1333333333333333),\n",
+       " (1.8666666666666667, 1.1333333333333333),\n",
+       " (1.866666666666667, 1.1333333333333335)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "highest_probability_strategy"
+    "[calculate_utilities(eq) for eq in nash_eq]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8666666666666671 for the leader\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "#sample_nash_eqs = random.sample(nash_eq, 200)\n",
+    "\n",
+    "best_equilibrium, best_utility = find_best_nash_equilibrium(nash_eq)\n",
+    "print(f\"{best_utility} for the leader\")"
    ]
   }
  ],
